Fix font metrics causing alignment issue

--- a/styles.css
+++ b/styles.css
@@ -45,18 +45,16 @@ body {
     top: 25%;
     bottom: auto;
     height: 12rem;
-    box-sizing: border-box;
 }
 
-#logo-section h1 {
+#logo-section p {
     color: var(--logo-color);
     font-family: 'Norse';
     font-size: 8rem;
-    height: 6rem;
 }
 
 #logo-section img {
-    height: 10rem;
+    height: 80%;
     width: auto;
 }
 
@@ -145,7 +143,7 @@ body {
 
 @font-face {
     font-family: 'Norse';
-    src: url(assets/Norse-Bold.otf);
+    src: url(assets/Norse-Bold.woff2);
 }
 
 input {
